--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,7 @@
     "Tom Wayson <twayson@esri.com> (http://tomwayson.com)"
   ],
   "description": "A collection of directives to help you use Esri maps and services in your Angular applications",
-  "main": ["dist/angular-esri-map.js"],
+  "main": ["dist/angular-esri-map.min.js"],
   "keywords": [
     "Angular",
     "Esri"
